Background fix and images added to use github an image server

--- a/ToDoList/ToDoLists.xaml
+++ b/ToDoList/ToDoLists.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="399*"/>
         </Grid.ColumnDefinitions>
         <Button Content="Back" HorizontalAlignment="Left" Margin="30,10,0,0" VerticalAlignment="Top" Height="36" Width="70" Click="BackClicked" Background="AliceBlue" BorderBrush="Transparent"/>
-        <DataGrid Name="ToDoListGrid" AutoGenerateColumns="False" Height="300" Margin="0,65,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" CanUserAddRows="False">
+        <DataGrid Name="ToDoListGrid" AutoGenerateColumns="False" Height="300" Margin="0,65,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" CanUserAddRows="False" Background="Transparent">
             <DataGrid.Columns>
                 <DataGridTextColumn MinWidth="50" Header="Id" Binding="{Binding Id}" IsReadOnly="True"/>
                 <DataGridTextColumn MinWidth="150" Header="Name" Binding="{Binding Name}" IsReadOnly="True"/>
